CREATE TABLE IF NOT EXISTS member
(
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    institution_id    BIGINT,
    country_id        BIGINT,
    username          VARCHAR(50)                             NOT NULL,
    password          VARCHAR(255)                            NOT NULL,
    role              VARCHAR(30)                             NOT NULL,
    name              VARCHAR(255)                            NOT NULL,
    first_name        VARCHAR(255),
    last_name         VARCHAR(255),
    email             VARCHAR(255)                            NOT NULL,
    birth_date        date,
    phone_number      VARCHAR(255),
    is_email_verified BOOLEAN                                 NOT NULL,
    created_at        TIMESTAMP WITH TIME ZONE                NOT NULL,
    updated_at        TIMESTAMP WITH TIME ZONE,
    CONSTRAINT pk_member PRIMARY KEY (id),
    CONSTRAINT uk_member_username UNIQUE (username),
    CONSTRAINT uk_member_email UNIQUE (email),
    CONSTRAINT fk_member_institution FOREIGN KEY (institution_id) REFERENCES institution (id),
    CONSTRAINT fk_member_country FOREIGN KEY (country_id) REFERENCES country (id)
);
