CREATE TABLE IF NOT EXISTS exam
(
    id                     BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    public_id              UUID                                    NOT NULL,
    exam_group_id          BIGINT                                  NOT NULL,
    question_set_id        BIGINT                                  NOT NULL,
    name                   VARCHAR(255)                            NOT NULL,
    registration_starts_at TIMESTAMP WITH TIME ZONE,
    registration_ends_at   TIMESTAMP WITH TIME ZONE,
    starts_at              TIMESTAMP WITH TIME ZONE,
    ends_at                TIMESTAMP WITH TIME ZONE,
    results_available_at   TIMESTAMP WITH TIME ZONE,
    created_at             TIMESTAMP WITH TIME ZONE                NOT NULL,
    updated_at             TIMESTAMP WITH TIME ZONE,
    CONSTRAINT pk_exam PRIMARY KEY (id),
    CONSTRAINT uk_exam_public_id UNIQUE (public_id),
    CONSTRAINT fk_exam_exam_group FOREIGN KEY (exam_group_id) REFERENCES exam_group (id),
    CONSTRAINT fk_exam_question_set FOREIGN KEY (question_set_id) REFERENCES question_set (id)
);

CREATE INDEX IF NOT EXISTS ix_exam_exam_group_id
    ON exam (exam_group_id);

CREATE INDEX IF NOT EXISTS ix_exam_question_set_id
    ON exam (question_set_id);
