CREATE TABLE IF NOT EXISTS question_image
(
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    question_id    BIGINT                                  NOT NULL,
    object_key     VARCHAR(255)                            NOT NULL,
    mime_type      VARCHAR(100)                            NOT NULL,
    size_bytes     INTEGER                                 NOT NULL,
    sha256         VARCHAR(64)                             NOT NULL,
    width          INTEGER                                 NOT NULL,
    height         INTEGER                                 NOT NULL,
    storage_bucket VARCHAR(255)                            NOT NULL,
    storage_region VARCHAR(255)                            NOT NULL,
    created_at     TIMESTAMP WITH TIME ZONE                NOT NULL,
    updated_at     TIMESTAMP WITH TIME ZONE,
    CONSTRAINT pk_question_image PRIMARY KEY (id),
    CONSTRAINT uk_question_image_question UNIQUE (question_id),
    CONSTRAINT fk_question_image_question FOREIGN KEY (question_id) REFERENCES question (id)
);
