CREATE TABLE IF NOT EXISTS submitted_answer
(
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    exam_session_id BIGINT                                  NOT NULL,
    question_id     BIGINT                                  NOT NULL,
    answer_text     TEXT                                    NOT NULL,
    submitted_at    TIMESTAMP WITH TIME ZONE                NOT NULL,
    created_at      TIMESTAMP WITH TIME ZONE                NOT NULL,
    updated_at      TIMESTAMP WITH TIME ZONE,
    CONSTRAINT pk_submitted_answer PRIMARY KEY (id),
    CONSTRAINT uk_submitted_answer_session_question UNIQUE (exam_session_id, question_id),
    CONSTRAINT fk_submitted_answer_exam_session FOREIGN KEY (exam_session_id) REFERENCES exam_session (id),
    CONSTRAINT fk_submitted_answer_question FOREIGN KEY (question_id) REFERENCES question (id)
);

CREATE INDEX IF NOT EXISTS ix_submitted_answer_exam_session_id
    ON submitted_answer (exam_session_id);

CREATE INDEX IF NOT EXISTS ix_submitted_answer_question_id
    ON submitted_answer (question_id);
