---
config:
  theme: redux-dark-color
  layout: dagre
  background: dark
---
erDiagram
    direction LR

    country {
        long id PK

        string name "국가 이름"
        string code "2자리 국가코드"
        string code3 "3자리 국가코드"
        string flag_emoji "국기"
        bool is_active "선택 가능한 국가여부"
    }

    institution {
        long id PK "기관 PK"

        string name "기관명"
        string code "기관 코드"
        string alias "기관 별칭"

        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    member {
        long id PK "회원 PK"
        uuid public_id "회원 UUID"
        long country_id FK "국적 FK, nullable"
        long institution_id FK "기관 FK, nullable"

        string username "로그인 아이디"
        string password "비밀번호 해시"
        string role "역할(하이퍼러닝, 기관 관리자, 학생)"

        string name "이름"
        string first_name "이름(명)"
        string last_name "성"
        date birthdate "생년월일"
        string email "이메일"
        string phone_number "전화번호"
        bool is_email_verified "이메일 인증 여부"

        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    refresh_token {
        long id PK "리프레시 토큰 PK"
        long member_id FK "회원 FK"
        long replaced_by_token_id FK "이 토큰을 대체한 새 토큰의 PK"

        uuid jti "JWT JTI"

        timestamptz issued_at "발급 타임스탬프"
        timestamptz expires_at "만료 타임스탬프"
        timestamptz revoked_at "폐기 타임스탬프"
        enum revocation_reason "폐기 유형(로그아웃, 회전)"
    }

    exam_level {
        long id PK "시험 레벨 PK"
        int level "KET 레벨 (1, 2, 3)"
        int price "응시료"
    }

    rating_tier {
        long id PK "등급 기준 PK"
        long exam_level_id FK "시험 레벨 FK"

        int tier "KET 등급(1-10)"
        string level "KET 레벨(A1, A2, B1, ...)"
        int min_score "최소 점수"
    }

    exam_group {
        long id PK "시험 그룹 PK"
        uuid public_id "시험 그룹 공개 UUID"
        long institution_id FK "소속 기관 FK, nullable"

        string name "시험 그룹명"
        int iteration_number "공개 시험 회차"

        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    exam {
        long id PK "시험 PK"
        uuid public_id "시험 공개 UUID"
        long exam_group_id FK "시험 그룹 FK"
        long question_set_id FK "출제 문항 세트 FK"

        string name "시험명"

        timestamptz registration_starts_at "접수 시작"
        timestamptz registration_ends_at "접수 종료"
        timestamptz starts_at "응시 시작"
        timestamptz ends_at "응시 종료"
        timestamptz results_available_at "결과 공개"

        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    payment {
        long id PK "결제 PK"
        long exam_session_id FK "응시 세션 FK"

        string portone_payment_id "포트원 결제 ID"
        long amount "결제 금액"
        long refund_amount "환불 금액"
        string method "결제 수단"
        string status "결제 상태"

        timestamptz paid_at "결제 완료 시각"
        timestamptz canceled_at "결제 취소 시각"
        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    exam_session {
        long id PK "응시 세션 PK"
        uuid public_id "세션 공개 UUID"
        long member_id FK "응시 회원 FK"
        long exam_id FK "정식 시험 FK, nullable"
        long question_set_id FK "직접 응시 모의고사 세트 FK, nullable"
        long examinee_country_id FK "응시자 국적 FK"
        long rating_tier_id FK "산출 등급 기준 FK"

        bool applicant_is_examinee "신청자와 응시자가 동일한지 여부"
        string examinee_name "응시자 이름"
        string examinee_first_name "응시자 first name(영문)"
        string examinee_last_name "응시자 last name(영문)"
        date examinee_birthdate "응시자 생년월일"

        string status "세션 상태"
        timestamptz registered_at "접수 시각"
        timestamptz canceled_at "접수 취소 시각"
        timestamptz started_at "응시 시작"
        timestamptz submitted_at "제출 시각"
        timestamptz graded_at "채점 완료 시각"

        int total_score "총점"
        bool passed "합격 여부"

        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    question_info {
        long id PK "문항 정보 PK"
        long exam_level_id FK "시험 레벨 FK"

        int number "문항 번호"
        string assessment_goal "평가 목표"
        string curriculum_code "교육과정 코드"
        string question_type "문항 유형"
        string content_type "콘텐츠 유형"
        string content_title "콘텐츠 제목"
        string difficulty "난이도"
        string writing_style "문체"

        int assessment_time "평가 시간(분)"
        int character_count "글자 수"
        int default_score "기본 배점"
    }

    question {
        long id PK "문항 PK"
        long question_set_id FK "소속 문항 세트 FK"
        long question_info_id FK "문항 정보 FK"

        string instruction "지시문"
        string content_text "제시자료(제시문, 지문, 상황, 조건, 보기, 쟁점, 자료 등)"
        string prompt "발문(직접적인 요구사항)"
        string model_answer "모범 답안, nullable"

        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    question_set {
        long id PK "문항 세트 PK"
        long exam_level_id FK "시험 레벨 FK"

        string name "세트명"
        string description "설명"
        string difficulty "세트 난이도"
        string set_type "용도(PUBLIC_EXAM, INSTITUTION_EXAM, MOCK_EXAM)"

        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    question_image {
        long id PK "문항 이미지 PK"
        long question_id FK "문항 FK"

        string object_key "스토리지 키"
        string mime_type "MIME 타입"
        int size_bytes "파일 크기"
        string sha256 "파일 해시"
        int width "가로 픽셀"
        int height "세로 픽셀"
        string storage_bucket "버킷"
        string storage_region "리전"

        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    criterion {
        long id PK "세부 기준 PK"
        long question_info_id FK "문항 정보 FK"
        long rubric_id FK "루브릭 FK"

        int score_value "점수 값"
        string descriptor "채점 기준 설명"
    }

    aes_task {
        long id PK "AES 작업 ID"
        uuid public_id "비동기 작업 식별자"
        long exam_session_id FK "응시 세션 FK"

        string status "작업 상태"
        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    submitted_answer {
        long id PK "제출 답안 PK"

        long exam_session_id FK "응시 세션 FK"
        long question_id FK "출제 문항 FK"

        string answer_text "답안 텍스트"
        timestamptz submitted_at "제출 시각"
        timestamptz created_at "생성 시각"
        timestamptz updated_at "수정 시각"
    }

    score {
        long id PK "점수 PK"

        long submitted_answer_id FK "제출 답안 FK"
        long rubric_id FK "루브릭 FK"

        int awarded_score "부여 점수"
        string feedback "피드백"
        timestamptz graded_at "채점 시각"
    }

    rubric {
        long id PK "루브릭 PK"
        string code "루브릭 코드"
        string description "설명"
        int sort_order "정렬 순서"
    }

    country ||--o{ member : "국적"

    institution |o--o{ member : "소속 기관"
    institution |o--o{ exam_group : "소속 기관"

    member ||--o{ refresh_token : "리프레시 토큰"
    member ||--o{ exam_session : "시험/모의고사 응시"

    exam_level ||--o{ question_info : "레벨별 문항 정보"
    exam_level ||--o{ question_set : "레벨별 문항 세트"
    exam_level ||--o{ rating_tier : "등급 기준"

    exam_group ||--o{ exam : "시험 묶음"
    exam |o--o{ exam_session : "정식 시험 응시"
    question_set ||--o{ exam : "시험 출제 세트"
    question_set ||--o{ question : "세트 문항"
    question_set |o--o{ exam_session : "직접 응시 모의고사"

    exam_session ||--o| aes_task : "채점 작업"
    exam_session ||--o{ submitted_answer : "제출 답안"
    exam_session ||--o| payment : "결제"
    rating_tier |o--o{ exam_session : "산출 등급 기준"

    question_info ||--o{ question : "문항 생성 정보"
    question_info ||--o{ criterion : "문항별 채점 기준"

    submitted_answer ||--o{ score : "채점 결과"

    question ||--o{ submitted_answer : "제출 답안"
    question ||--o| question_image : "문항 이미지"

    rubric ||--o{ criterion : "세부 채점 기준"
    rubric ||--o{ score : "루브릭별 점수"

%% -- 회원 로그인 ID 중복 방지
%% UNIQUE (public_id);                          -- member
%% UNIQUE (username);

%% -- 이메일을 로그인/연락에 사용한다면
%% UNIQUE (email);

%% -- 리프레시 토큰 JTI 중복 방지
%% UNIQUE (jti);

%% -- 시험 공개 UUID 중복 방지
%% UNIQUE (public_id);                         -- exam
%% UNIQUE (public_id);                         -- exam_group

%% -- 문항 세트 내 문항 슬롯 중복 방지
%% UNIQUE (question_set_id, question_info_id); -- question

%% -- 레벨별 문항 규격 번호 중복 방지
%% UNIQUE (exam_level_id, number);             -- question_info

%% -- 문항 정보 기준 세부 기준 중복 방지
%% UNIQUE (question_info_id, rubric_id, score_value); -- criterion

%% -- 한 응시 세션에서 같은 문항 답안 중복 방지
%% UNIQUE (exam_session_id, question_id);

%% -- 한 답안에서 같은 루브릭 점수 중복 방지
%% UNIQUE (submitted_answer_id, rubric_id);

%% -- 시험/모의고사 세션 소스 제약
%% CHECK ((exam_id IS NOT NULL) <> (question_set_id IS NOT NULL)); -- exam_session
%% exam_id가 있으면 정식 시험 응시, question_set_id가 있으면 직접 응시 모의고사다.
%% UNIQUE (exam_id, member_id); -- 정식 시험 중복 접수 방지
%% exam_id가 NULL인 모의고사는 PostgreSQL의 기본 NULL distinct 동작으로 반복 응시할 수 있다.

%% -- 문항 세트 정책
%% PUBLIC_EXAM, INSTITUTION_EXAM 세트는 exam.question_set_id로 사용한다.
%% MOCK_EXAM 세트는 exam 없이 exam_session.question_set_id로 바로 응시한다.
%% question_set 생성 시 해당 exam_level의 모든 question_info에 대응하는 빈 question을 함께 생성한다.
%% 문항 번호, 순서, 기본 배점은 question_info에서 가져온다.
%% question.question_info의 exam_level_id는 소속 question_set.exam_level_id와 일치해야 한다.
%% 시험 또는 모의고사에 사용하기 전 필수 문항 슬롯과 instruction, prompt가 모두 채워졌는지 검증한다.
%% 이미 시험 또는 모의고사 세션에서 사용한 세트는 수정하지 않고, 새 구성이 필요하면 세트와 문항을 복제한다.
%% submitted_answer.question_id는 해당 세션의 시험 또는 모의고사 문항 세트에 속해야 한다.

%% -- 세션 공개 UUID 중복 방지
%% UNIQUE (public_id);

%% -- 결제와 응시 세션 1:1 보장
%% UNIQUE (exam_session_id);                   -- payment

%% -- 채점 작업과 응시 세션 1:1 보장
%% UNIQUE (exam_session_id);                   -- aes_task

%% -- 이미지 중복 방지
%% UNIQUE (question_id);    -- question_image
